--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ html {
     text-transform: uppercase;
     padding: 1rem;
     font-weight: 600;
-    color: var(--bs-heading-color) !important;
+    color: var(--px-theme-text) !important;
     display: flex;
     align-items: center;
 }
