--- a/index.html
+++ b/index.html
@@ -52,18 +52,19 @@
         }
    /* Dark Theme Variables */
 [data-bs-theme=dark] {
-    --px-theme: #e84b2f !important; /* Bright coral for a bold theme */
-    --px-theme-text: rgb(255, 255, 255) !important; /* White for high contrast text */
-    --px-bg: rgb(20, 20, 20) !important; /* Dark shade for the main background */
-    --px-text: rgb(153, 153, 153) !important; /* Light gray for readability */
-    --px-gray-1: rgb(0, 0, 0) !important; /* Pure black for depth */
-    --px-gray-2: rgb(20, 20, 20) !important; /* Dark gray for blending */
-    --px-gray-3: rgb(30, 30, 30) !important; /* Lighter gray for subtle contrast */
-    --px-gray-4: rgb(38, 38, 38) !important; /* Darker gray for balance */
-    --px-gray-5: rgb(0, 0, 0) !important; /* Black as a strong anchor */
-    --px-border: rgb(30, 30, 30) !important; /* Dark gray for borders */
-    --bs-heading-color: rgb(255, 255, 255) !important; /* White for standout headings */
+    --px-theme: #a84336 !important; /* Muted, earthy red for subtle elegance */
+    --px-theme-text: #ffffff !important; /* White for clear contrast */
+    --px-bg: #141414 !important; /* Very dark gray for the main background */
+    --px-text: #999999 !important; /* Light gray for readability */
+    --px-gray-1: #000000 !important; /* Pure black for depth */
+    --px-gray-2: #141414 !important; /* Dark gray for blending */
+    --px-gray-3: #1e1e1e !important; /* Lighter gray for subtle contrast */
+    --px-gray-4: #262626 !important; /* Darker gray for balance */
+    --px-gray-5: #000000 !important; /* Black as a strong anchor */
+    --px-border: #1e1e1e !important; /* Dark gray for borders */
+    --bs-heading-color: #ffffff !important; /* White for clear headings */
 }
+
 
 /* Scrollbar Styles for Webkit Browsers */
 ::-webkit-scrollbar {
@@ -129,19 +130,6 @@ html {
             color: #fff;
             text-decoration: none
         }
-        .mylogo{
-                margin: .5rem 0;
-                font-size: 20px !important;
-                text-transform: uppercase;
-                padding: 1rem ;
-                font-weight: 600;
-                color: #f1e0da !important;
-            }
-        
-        .mylogo i{
-                font-size: 20px;
-                padding-right: 7px;
-            }
         .projects-Counter, .services-section{
             overflow: hidden !important;
         }
