--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@ html {
                                                                 class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required form-control"
                                                                 id="name" aria-required="true" aria-invalid="false"
                                                                 placeholder="Name *" value="" type="text"
-                                                                name="Name"></span>
+                                                                name="Name" required></span>
                                                     </p>
                                                 </div>
                                             </div>
@@ -1148,7 +1148,7 @@ html {
                                                                 class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email form-control"
                                                                 id="email" aria-required="true" aria-invalid="false"
                                                                 placeholder="Email *" value="" type="email"
-                                                                name="Email"></span>
+                                                                name="Email" required></span>
                                                     </p>
                                                 </div>
                                             </div>
@@ -1160,7 +1160,7 @@ html {
                                                                 class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required form-control"
                                                                 id="subject" aria-required="true" aria-invalid="false"
                                                                 placeholder="Subject *" value="" type="text"
-                                                                name="Subject"></span>
+                                                                name="Subject" required></span>
                                                     </p>
                                                 </div>
                                             </div>
@@ -1172,7 +1172,7 @@ html {
                                                                 class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required form-control"
                                                                 id="message" aria-required="true" aria-invalid="false"
                                                                 placeholder="Your message *"
-                                                                name="message"></textarea></span>
+                                                                name="message" required></textarea></span>
                                                     </p>
                                                 </div>
                                             </div>
