--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     --px-bg: #141414 !important; /* Very dark gray for the main background */
     --px-text: #999999 !important; /* Light gray for readability */
     --px-gray-1: #000000 !important; /* Pure black for depth */
-    --px-gray-2: #141414 !important; /* Dark gray for blending */
+    --px-gray-2: #00283a !important; /* Dark gray for blending */
     --px-gray-3: #1e1e1e !important; /* Lighter gray for subtle contrast */
     --px-gray-4: #262626 !important; /* Darker gray for balance */
     --px-gray-5: #000000 !important; /* Black as a strong anchor */
