--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         }
    /* Dark Theme Variables */
 [data-bs-theme=dark] {
-    --px-theme: #a84336 !important; /* Muted, earthy red for subtle elegance */
+    --px-theme: #70ba65 !important; /* Muted, earthy red for subtle elegance */
     --px-theme-text: #ffffff !important; /* White for clear contrast */
     --px-bg: #141414 !important; /* Very dark gray for the main background */
     --px-text: #999999 !important; /* Light gray for readability */
