--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 [data-bs-theme=dark] {
     --px-theme: #70ba65 !important; /* Muted, earthy red for subtle elegance */
     --px-theme-text: #ffffff !important; /* White for clear contrast */
-    --px-bg: #00151f !important; /* Very dark gray for the main background */
+    --px-bg: #02162b !important; /* Very dark gray for the main background */
     --px-text: #999999 !important; /* Light gray for readability */
-    --px-gray-1: #00151f !important; /* Pure black for depth */
+    --px-gray-1: #02162b !important; /* Pure black for depth */
     --px-gray-2: #00283a !important; /* Dark gray for blending */
     --px-gray-3: #1e1e1e !important; /* Lighter gray for subtle contrast */
     --px-gray-4: #262626 !important; /* Darker gray for balance */
