--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ html {
                             <div class="row align-items-start">
                                 <div class="col-md-7 py-4">
                                     <div class="about-me-img">
-                                        <img src="media/me.jpg" title="" alt="">
+                                        <img src="media/me.png" title="" alt="">
                                     </div>
                                 </div>
                                 <div class="col-md-5 py-4">
@@ -1540,7 +1540,7 @@ html {
         <div class="container">
             <div class="footer-info">
                 <div class="footer-avatar">
-                    <img src="/media/me.jpg" title="" alt="">
+                    <img src="/media/me.png" title="" alt="">
                 </div>
                 <h6>Kalemullah Ahsan</h6>
             </div>
